// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test on <GifExpertApp/> Should show correctly 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategoryForm
    setCategories={[Function]}
  />
  <hr />
  <ol />
</Fragment>
`;

exports[`Test on <GifExpertApp/> should show a categoryies list 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategoryForm
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="One Punch"
      key="One Punch"
    />
    <GifGrid
      category="Dragon Ball"
      key="Dragon Ball"
    />
  </ol>
</Fragment>
`;
